--- a/pass/autofill/impl/src/main/AndroidManifest.xml
+++ b/pass/autofill/impl/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"/>
 
+        <activity android:name="proton.android.pass.autofill.debug.AutofillDebugActivity"
+            android:launchMode="singleTop"
+            android:clearTaskOnLaunch="true"
+            android:excludeFromRecents="true"
+            android:windowSoftInputMode="adjustResize"/>
+
         <service
             android:name="proton.android.pass.autofill.ProtonPassAutofillService"
             android:label="@string/autofill_service_name"
