--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -210,6 +210,7 @@ core-key-domain = { module = "me.proton.core:key-domain", version.ref = "core" }
 core-network = { module = "me.proton.core:network", version.ref = "core" }
 core-network-data = { module = "me.proton.core:network-data", version.ref = "core" }
 core-network-domain = { module = "me.proton.core:network-domain", version.ref = "core" }
+core-notification = { module = "me.proton.core:notification", version.ref = "core" }
 core-observability = { module = "me.proton.core:observability", version.ref = "core" }
 core-payment = { module = "me.proton.core:payment", version.ref = "core" }
 core-paymentIap = { module = "me.proton.core:payment-iap", version.ref = "core" }
@@ -218,6 +219,7 @@ core-payment-domain = { module = "me.proton.core:payment-domain", version.ref = 
 core-plan = { module = "me.proton.core:plan", version.ref = "core" }
 core-presentation = { module = "me.proton.core:presentation", version.ref = "core" }
 core-presentation-compose = { module = "me.proton.core:presentation-compose", version.ref = "core" }
+core-push = { module = "me.proton.core:push", version.ref = "core" }
 core-report = { module = "me.proton.core:report", version.ref = "core" }
 core-test-android = { module = "me.proton.core:test-android", version.ref = "core" }
 core-test-android-instrumented = { module = "me.proton.core:test-android-instrumented", version.ref = "core" }
