--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -229,6 +229,7 @@ core-userSettings = { module = "me.proton.core:user-settings", version.ref = "co
 core-userSettings-domain = { module = "me.proton.core:user-settings-domain", version.ref = "core" }
 core-userSettings-presentation-compose = { module = "me.proton.core:user-settings-presentation-compose", version.ref = "core" }
 core-utilAndroidDagger = { module = "me.proton.core:util-android-dagger", version.ref = "core" }
+core-utilAndroidSentry = { module = "me.proton.core:util-android-sentry", version.ref = "core" }
 core-utilKotlin = { module = "me.proton.core:util-kotlin", version.ref = "core" }
 
 # Dagger
