--- a/pass/tracing/impl/src/main/AndroidManifest.xml
+++ b/pass/tracing/impl/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application>
+        <meta-data
+            android:name="io.sentry.auto-init"
+            android:value="false" />
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
