--- a/pass/clipboard/impl/src/main/AndroidManifest.xml
+++ b/pass/clipboard/impl/src/main/AndroidManifest.xml
@@ -1,2 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest/>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <application>
+        <receiver
+            android:name=".ClearClipboardBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="ClearClipboardBroadcastReceiver.CLEAR_CLIPBOARD" />
+            </intent-filter>
+        </receiver>
+    </application>
+</manifest>
