--- a/pass/autofill/test-app/src/main/AndroidManifest.xml
+++ b/pass/autofill/test-app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             android:name="proton.android.pass.autofill.sample.simpleactivity.SimpleLoginActivity"
             android:exported="true" />
         <activity
+            android:name="proton.android.pass.autofill.sample.autofillmanageractivity.AutofillManagerLoginActivity"
+            android:exported="true" />
+        <activity
             android:name="proton.android.pass.autofill.sample.webview.WebViewLoginActivity"
             android:exported="true" />
         <activity
