--- a/pass/autofill/test-app/src/main/AndroidManifest.xml
+++ b/pass/autofill/test-app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:name="proton.android.pass.autofill.sample.webview.WebViewLoginActivity"
             android:exported="true" />
         <activity
+            android:name="proton.android.pass.autofill.sample.multistep.MultiStepFirstLoginActivity"
+            android:exported="true" />
+        <activity
+            android:name="proton.android.pass.autofill.sample.multistep.MultiStepSecondLoginActivity"
+            android:exported="true" />
+        <activity
             android:name="proton.android.pass.autofill.sample.SampleSelectionActivity"
             android:exported="true" >
             <intent-filter>
