chore: add personal info sample

--- a/pass/autofill/test-app/src/main/AndroidManifest.xml
+++ b/pass/autofill/test-app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:name="proton.android.pass.autofill.sample.creditcardactivity.CreditCardActivity"
             android:exported="true" />
         <activity
+            android:name="proton.android.pass.autofill.sample.personalinfoactivity.PersonalInfoActivity"
+            android:exported="true" />
+        <activity
             android:name="proton.android.pass.autofill.sample.SampleSelectionActivity"
             android:exported="true" >
             <intent-filter>
